{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 76,
  "lineage": "26917916-6a4c-77f7-eeeb-d850bc5330a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:724552370522:instance/i-0cc858af640fd88cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc858af640fd88cc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08b5b6e1cfbf0a638",
            "private_dns": "ip-172-31-85-117.ec2.internal",
            "private_ip": "172.31.85.117",
            "public_dns": "ec2-54-165-169-126.compute-1.amazonaws.com",
            "public_ip": "54.165.169.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a1a0470c4c436f2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2b8b18a9351e6fa",
            "tags": {
              "name": "k8s0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fd4da03677e70b57"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:724552370522:instance/i-0e5403e41e22cb09f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5403e41e22cb09f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0744188ce6ae0d749",
            "private_dns": "ip-172-31-80-60.ec2.internal",
            "private_ip": "172.31.80.60",
            "public_dns": "ec2-3-92-185-187.compute-1.amazonaws.com",
            "public_ip": "3.92.185.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-027100ff695905790",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2b8b18a9351e6fa",
            "tags": {
              "name": "k8s1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fd4da03677e70b57"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:724552370522:instance/i-09b7d17d1a3c7396a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b7d17d1a3c7396a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03bc5469f7521427f",
            "private_dns": "ip-172-31-92-109.ec2.internal",
            "private_ip": "172.31.92.109",
            "public_dns": "ec2-52-90-33-101.compute-1.amazonaws.com",
            "public_ip": "52.90.33.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02212602b820215b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2b8b18a9351e6fa",
            "tags": {
              "name": "k8s2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fd4da03677e70b57"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:724552370522:instance/i-08df51d2c327f3119",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08df51d2c327f3119",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0d24d4c09107105",
            "private_dns": "ip-172-31-94-116.ec2.internal",
            "private_ip": "172.31.94.116",
            "public_dns": "ec2-107-22-154-190.compute-1.amazonaws.com",
            "public_ip": "107.22.154.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0816f376fd05da01a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2b8b18a9351e6fa",
            "tags": {
              "name": "k8s4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fd4da03677e70b57"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.k8s4",
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:724552370522:instance/i-08d70a060d8045836",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d70a060d8045836",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-054d45c9308988adf",
            "private_dns": "ip-172-31-89-194.ec2.internal",
            "private_ip": "172.31.89.194",
            "public_dns": "ec2-44-202-49-1.compute-1.amazonaws.com",
            "public_ip": "44.202.49.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-098f483a6dbe15e2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2b8b18a9351e6fa",
            "tags": {
              "name": "k8s5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fd4da03677e70b57"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a0c45ebc70f98ea",
            "arn": "arn:aws:ec2:us-east-2:724552370522:instance/i-04aa6b68feb2a4907",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04aa6b68feb2a4907",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a81d4f07ed938594",
            "private_dns": "ip-172-31-21-236.us-east-2.compute.internal",
            "private_ip": "172.31.21.236",
            "public_dns": "ec2-13-58-206-116.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.206.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05b6d2259e05a4562",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00906349bd8a6d4b3",
            "tags": {
              "name": "k8s6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018fcb7023eada295"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-tabela1",
            "aws_security_group.acesso_ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a0c45ebc70f98ea",
            "arn": "arn:aws:ec2:us-east-2:724552370522:instance/i-052f87520de39da72",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052f87520de39da72",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02586a795b32559da",
            "private_dns": "ip-172-31-3-164.us-east-2.compute.internal",
            "private_ip": "172.31.3.164",
            "public_dns": "ec2-3-144-124-1.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.124.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0519a6d7e96ae8058",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0784239e4cbf788f9",
            "tags": {
              "name": "k8s7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018fcb7023eada295"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-tabela1",
            "aws_security_group.acesso_ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724552370522:security-group/sg-0fd4da03677e70b57",
            "description": "acesso-ssh",
            "egress": [],
            "id": "sg-0fd4da03677e70b57",
            "ingress": [
              {
                "cidr_blocks": [
                  "201.13.100.80/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": null,
            "owner_id": "724552370522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c66aa54cdeffe27a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso_ssh-us-east-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:724552370522:security-group/sg-018fcb7023eada295",
            "description": "acesso-ssh",
            "egress": [],
            "id": "sg-018fcb7023eada295",
            "ingress": [
              {
                "cidr_blocks": [
                  "201.13.100.80/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": null,
            "owner_id": "724552370522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f9a0c0b303066c6"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}